--- a/style.css
+++ b/style.css
@@ -1,24 +1,38 @@
  body{
     background-color: black;
     color: white;
+    font-family: Poppins;
     width: auto;
-    margin:20px;
+    margin:auto;
+    padding: auto;
     font-size: 18px ;
-    overflow: hidden;
+   /* overflow: hidden;*/
     
 }
 
+#header{
+  background-image: url("./background.jpg");
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size:cover;
+  width: auto;
+  margin: 10px;
+  padding: 5px;
+  height: 100%;
+
+}
+
 nav {
-    color:rgb(252 92 28);
+    color:rgb(241 137 7);
     display: flex;
     height: 30px;
-    margin: 0px 40px 10px 40px;
-    padding: 5px;
+    margin: 10px;
+    padding: auto;
     font-size: 20px;
     font-weight: 600;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-family: Arial, Helvetica, sans-serif;
     align-items: center;
-    justify-content: space-between;
+    justify-content: space-around;
     position: relative;
     /*border-bottom: rgb(145, 144, 144) solid 2px;*/
   
@@ -26,39 +40,46 @@ nav {
 
 
   nav ul li{
-    color: rgb(252 92 28);
     display: inline;
     list-style-type: none;
     text-decoration: none;
-    margin: 10px;
+    margin: 5px;
     padding: 5px;
+    text-transform: uppercase;
   }
 
 nav ul li:hover{
   color: rgb(143, 45, 6);
-  padding-bottom: 5px;
   /*background-color: rgb(122, 42, 11);*/
   text-decoration: underline;
 }
+
+nav ul li a{
+  color:inherit;
+  text-decoration: none;}
 
 /*#logo{
 height: 90px;
 width: 90px;
   }
 */
-#bg{margin: 10px;
+#bg{
+  margin: 50px;
     color:white;
     font-style: inherit;
     text-align: center;
     display: inline;
     height: auto;
-    
-  }
+    }
 
-nav ul li a{
-  color: rgb(252 92 28);
-  text-decoration: none;}
-Z
-#name{
-  color: rgb(252 92 28);
+#top-me{
+  margin: 10px;
+  font-size: 35px;
 }
+
+.span-orange{
+  color:rgb(252 92 28);
+  font-size: 80px;
+  font-weight: 600;
+}
+
