--- a/style.css
+++ b/style.css
@@ -2,9 +2,9 @@
     background-color: black;
     color: white;
     font-family: Poppins;
-    width: auto;
-    margin:auto;
-    padding: auto;
+    width: 100%;
+    margin:0px;
+    padding: 10px;
     font-size: 18px ;
    /* overflow: hidden;*/
     
@@ -14,11 +14,11 @@
   background-image: url("./background.jpg");
   background-repeat: no-repeat;
   background-position: center;
-  background-size:cover;
-  width: auto;
+  background-size:contain;
+  width: 100%;
   margin: 10px;
   padding: 5px;
-  height: 100%;
+  height: 100vh;
 
 }
 
