--- a/style.css
+++ b/style.css
@@ -2,11 +2,11 @@
     background-color: black;
     color: white;
     font-family: Poppins;
-    width: 100%;
-    margin:0px;
-    padding: 10px;
+    width: 100vw;
+    margin:auto;
+    padding: auto;
     font-size: 18px ;
-   /* overflow: hidden;*/
+    overflow-x: hidden;
     
 }
 
@@ -14,10 +14,10 @@
   background-image: url("./background.jpg");
   background-repeat: no-repeat;
   background-position: center;
-  background-size:contain;
-  width: 100%;
-  margin: 10px;
-  padding: 5px;
+  background-size:cover;
+  width: 100vw;
+  margin: 0px;
+  padding: 0px;
   height: 100vh;
 
 }
