--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,6 @@
- body{
+*{box-sizing: border-box;}
+
+body{
   background-color: black;
   color: white;
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
@@ -9,86 +11,75 @@
   overflow-x: hidden;
 }
 
-#header{
+nav {
+  color:rgb(241 137 7);
+  display: flex;
+  height: 35px;
+  margin: auto;
+  padding: 5px;
+  font-size: 20px;
+  font-weight: 600;
+  font-family: Arial, Helvetica, sans-serif;
+  align-items: center;
+  justify-content: space-around;
+  position: relative;
+ }
+
+nav ul li{
+  display: inline;
+  list-style-type: none;
+  text-decoration: none;
+  font-size: 15px;
+  margin: 10px;
+  padding: 5px;
+  text-transform: uppercase;
+  position: static;
+}
+
+nav ul li:hover{
+color: rgb(143, 45, 6);
+/*background-color: rgb(122, 42, 11);*/
+text-decoration: underline;
+font-weight: 800;
+margin: 8px;
+padding: 2px;
+}
+
+nav ul li a{
+color:inherit;
+text-decoration: none;}
+
+section#header{
   background-image: url("../images/background.jpg");
   background-color: rgb(255, 255, 255);
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
-  width:auto;
+  width: auto;
   margin: auto;
-  height: max-content;
-  text-align: center;}
+  text-align: center;
+  color:white;
+  font-style: normal;
+  flex-direction: column;
+  align-content: center;
+  height: auto;}
 
-nav {
-    color:rgb(241 137 7);
-    display: flex;
-    height: 30px;
-    margin: auto;
-    padding: 5px;
-    font-size: 20px;
-    font-weight: 600;
-    font-family: Arial, Helvetica, sans-serif;
-    align-items: center;
-    justify-content: space-around;
-    position: relative;
-    /*border-bottom: rgb(145, 144, 144) solid 2px;*/}
-
-  nav ul li{
-    display: inline;
-    list-style-type: none;
-    text-decoration: none;
-    font-size: 15px;
-    margin: 10px;
-    padding: 5px;
-    text-transform: uppercase;
-    position: static;
-  }
-
-nav ul li:hover{
-  color: rgb(143, 45, 6);
-  /*background-color: rgb(122, 42, 11);*/
-  text-decoration: underline;
-  font-weight: 800;
-  margin: 8px;
-  padding: 2px;
+div h1#name {
+  font-size: 50px;
+  height: 200px;
+  margin: 20px;
+  padding: 5px;
 }
 
-nav ul li a{
-  color:inherit;
-  text-decoration: none;}
-
-#bg{
-    color:white;
-    font-style: inherit;
-    text-align: center;
-    display: inline;}
- 
-section#bg h3{
-  margin: 0px;
-  padding: 0px;} 
-   
-#top-me{
-  margin: 5px;
-  padding: auto;
-  font-size: 35px;
-  height: 150px;}
-
-.span-orange{
-  color:rgb(252 92 28);
-  font-size: 30px;
-  font-weight: 600;
-  position: relative;}
-
-#header-intro{
-  margin: 10x;
-  padding: 5px;
-  position: relative;
+#header-intro {
+  /*position: relative;*/
   text-align: center;
-  display: inline-block;
+  margin: 20px;
+  padding: 5px;
+ display: inline;
   font-size: 20px;
   width: 70vw;
-  height: 130px;}
+  height: 150px;}
 
 .social-icons{
   width: 50px;
