--- a/css/style.css
+++ b/css/style.css
@@ -104,24 +104,58 @@ div h1#name {
 #about_text{
   text-align: justify;
   width: 600px;
-  /* background-color: rgb(143, 45, 6); */
-  /* border-radius: 50px; */
-  /* padding: 10px; */
   margin: auto;
   }
   
 .button{
-  height: 40px;
-  width: 100px;
+  height: 50px;
+  width: 120px;
   margin: 10px;
   color: black;
   background-color: rgb(143, 45, 6);
-  border-radius: 10px;
+  border-radius: 12px;
 }
 
 #me{
   width: 500px;
-  height: 429px;
-  margin: auto;
+  height: 449px;
+  margin: 10px;
+}     
+
+section#services{
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+  align-items: center;
 }
 
+.serv {
+  margin: 25px;
+  width: 300px;
+  height: 100px;
+  background-color: rgb(241, 137, 7);
+  border-radius: 10px;
+  box-shadow: 0px 0px 8px rgba(241, 137, 7, 0.5);
+  display: flex;
+  align-items: center;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-weight: bold;
+  color: black;
+  transition: transform 0.3s;
+}
+
+.serv:hover {
+  transform: scale(1.05);
+  box-shadow: 0px 0px 12px rgba(241, 137, 7, 0.7);
+}
+
+.serv-icon {
+  width: 50px;
+  height: 50px;
+  margin-right: 10px;
+}
+
+.serv-text {
+  display: flex;
+  align-items: center;
+}
