--- a/css/style.css
+++ b/css/style.css
@@ -130,12 +130,12 @@ section#services{
 }
 
 .serv {
-  margin: 25px;
+  margin: 20px;
   width: 300px;
   height: 100px;
   background-color: rgb(241, 137, 7);
   border-radius: 10px;
-  box-shadow: 0px 0px 8px rgba(241, 137, 7, 0.5);
+  box-shadow: 0px 0px 10px rgba(241, 137, 7, 0.5);
   display: flex;
   align-items: center;
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
@@ -145,17 +145,18 @@ section#services{
 }
 
 .serv:hover {
-  transform: scale(1.05);
+  transform: scale(1.2);
   box-shadow: 0px 0px 12px rgba(241, 137, 7, 0.7);
 }
 
 .serv-icon {
-  width: 50px;
-  height: 50px;
-  margin-right: 10px;
+  width: 100px;
+  height: 100px;
+  margin-right: 15px;
 }
 
 .serv-text {
+  font-size: 25px;
   display: flex;
   align-items: center;
 }
