--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,11 @@
 *{box-sizing: border-box;
 margin: 0;}
 
+a{text-decoration: none;
+color:rgb(241, 137, 7)}
+
+li{list-style-type: none;}
+
 body{
   background-color: black;
   color: white;
@@ -12,14 +17,13 @@ body{
   overflow-x: hidden;
 }
 
-nav {
+nav{
   color:rgb(241 137 7);
   display: flex;
   height: 35px;
   margin: auto;
   padding: 5px;
-  font-size: 20px;
-  font-weight: 600;
+  font-size: 15px;
   font-family: Arial, Helvetica, sans-serif;
   align-items: center;
   justify-content: space-around;
@@ -28,27 +32,16 @@ nav {
 
 nav ul li{
   display: inline;
-  list-style-type: none;
-  text-decoration: none;
-  font-size: 15px;
   margin: auto;
   padding: 10px;
-  text-transform: uppercase;
-  position: static;
+  
+  text-transform: capitalize;
+  transition: transform 0.3s;
 }
 
 nav ul li:hover{
-color: rgb(143, 45, 6);
-/*background-color: rgb(122, 42, 11);*/
-text-decoration: underline;
-font-size: 18px;
-margin: 10px;
-padding: 5px;
+transform: scale(1.5);
 }
-
-nav ul li a{
-color:inherit;
-text-decoration: none;}
 
 section#header{
   background-image: url("../images/background.jpg");
@@ -131,8 +124,8 @@ section#services{
 
 .serv {
   margin: 20px;
-  width: 300px;
-  height: 100px;
+  width: 400px;
+  height: 150px;
   background-color: rgb(241, 137, 7);
   border-radius: 10px;
   box-shadow: 0px 0px 10px rgba(241, 137, 7, 0.5);
