--- a/css/style.css
+++ b/css/style.css
@@ -1,157 +1,156 @@
 *{box-sizing: border-box;
-margin: 0;}
-
-a{text-decoration: none;
-color:rgb(241, 137, 7)}
-
-li{list-style-type: none;}
-
-body{
-  background-color: black;
-  color: white;
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  width: 100%;
-  margin: auto;
-  padding: 5px;
-  font-size: 18px;
-  overflow-x: hidden;
-}
-
-nav{
-  color:rgb(241 137 7);
-  display: flex;
-  height: 60px;
-  margin: 0px 0 px 0 px 10px;
-  padding: 5px;
-  font-size: 15px;
-  font-family: Arial, Helvetica, sans-serif;
-  align-items: center;
-  justify-content: space-around;
-  position: fixed;
-  top: 0;
- }
-
-nav ul li{
-  display: block;
-  float: left;
-  margin: auto;
-  padding: 10px;
+  margin: 0;}
   
-  text-transform: capitalize;
-  transition: transform 0.3s;
-}
-
-nav ul li:hover{
-transform: scale(1.5);
-}
-
-section#header{
-  background-image: url("../images/background.jpg");
-  background-color: rgb(255, 255, 255);
-  background-repeat: no-repeat;
-  background-position: center;
-  background-size: cover;
-  width: auto;
-  margin: auto;
-  text-align: center;
-  color:white;
-  font-style: normal;
-  flex-direction: column;
-  align-content: center;
-  height: 100%;}
-
-div h1#name {
-  font-size: 50px;
-  height: 200px;
-  margin: 20px;
-  padding: 5px;
-}
-
-#header-intro {
-  /*position: relative;*/
-  text-align: center;
-  margin: 20px;
-  padding: 5px;
- display: inline;
-  font-size: 20px;
-  width: 70vw;
-  height: 150px;}
-
-.social-icons{
-  width: 50px;
-  height: 50px;
-  margin:  50px 5px;}
-
-/*.topic-header{
-   text-align: left;
-   font-weight: 600; 
-   width: 100%;
-   margin: 20px;
-   display: block;}*/
-
-#about{
-  margin: 10px 30px 20px 30px;
-  padding: 10px;
-  display: flex;
-
-  justify-content: space-around;
-
-#about_text{
-  text-align: justify;
-  width: auto;
-  margin: 10px;
-}
+  a{text-decoration: none;
+  color:rgb(241, 137, 7)}
   
-.button{
-  height: 50px;
-  width: 120px;
-  margin: 10px;
-  color: black;
-  background-color: rgb(143, 45, 6);
-  border-radius: 12px;
-}
-
-#me{
-  width: 500px;
-  height: 449px;
-  margin: 10px;
-}     
-
-section#services{
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-evenly;
-  align-items: center;
-}
-
-.serv {
-  margin: 20px;
-  width: 350px;
-  height: 100px;
-  background-color: rgb(241, 137, 7);
-  border-radius: 10px;
-  box-shadow: 0px 0px 10px rgba(241, 137, 7, 0.5);
-  display: flex;
-  align-items: center;
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  font-weight: bold;
-  color: black;
-  transition: transform 1s;
-}
-
-.serv:hover {
-  transform: scale(1.2);
-  box-shadow: 0px 0px 12px rgba(241, 137, 7, 0.8);
-}
-
-.serv-icon {
-  width: 100px;
-  height: 100px;
-  margin-right: 15px;
-}
-
-.serv-text {
-  font-size: 25px;
-  display: flex;
-  align-items: center;
-}
+  li{list-style-type: none;}
+  
+  body{
+    background-color: black;
+    color: white;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    width: 100%;
+    margin: auto;
+    padding: 5px;
+    font-size: 18px;
+    overflow-x: hidden;
+  }
+  
+  nav{
+    color:rgb(241 137 7);
+    display: flex;
+    height: 35px;
+    margin: auto;
+    padding: 5px;
+    font-size: 15px;
+    font-family: Arial, Helvetica, sans-serif;
+    align-items: center;
+    justify-content: space-around;
+    position: relative;
+   }
+  
+  nav ul li{
+    display: inline;
+    margin: auto;
+    padding: 10px;
+    
+    text-transform: capitalize;
+    transition: transform 0.3s;
+  }
+  
+  nav ul li:hover{
+  transform: scale(1.5);
+  }
+  
+  section#header{
+    background-image: url("../images/background.jpg");
+    background-color: rgb(255, 255, 255);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    width: auto;
+    margin: auto;
+    text-align: center;
+    color:white;
+    font-style: normal;
+    flex-direction: column;
+    align-content: center;
+    height: auto;}
+  
+  div h1#name {
+    font-size: 50px;
+    height: 200px;
+    margin: 20px;
+    padding: 5px;
+  }
+  
+  #header-intro {
+    /*position: relative;*/
+    text-align: center;
+    margin: 20px;
+    padding: 5px;
+   display: inline;
+    font-size: 20px;
+    width: 70vw;
+    height: 150px;}
+  
+  .social-icons{
+    width: 50px;
+    height: 50px;
+    margin: 5px;}
+  
+    .topic-header{
+     text-align: center;
+     font-weight:600; 
+     width: 100%;
+     margin: 15px;
+     display: block;}
+  
+  #about{
+    margin: 10px;
+    padding: 10px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;}
+  
+  #about_text{
+    text-align: justify;
+    width: 600px;
+    margin: auto;
+    }
+    
+  .button{
+    height: 50px;
+    width: 120px;
+    margin: 10px;
+    color: black;
+    background-color: rgb(143, 45, 6);
+    border-radius: 12px;
+  }
+  
+  #me{
+    width: 500px;
+    height: 449px;
+    margin: 10px;
+  }     
+  
+  section#services{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    align-items: center;
+  }
+  
+  .serv {
+    margin: 20px;
+    width: 350px;
+    height: 100px;
+    background-color: rgb(241, 137, 7);
+    border-radius: 10px;
+    box-shadow: 0px 0px 10px rgba(241, 137, 7, 0.5);
+    display: flex;
+    align-items: center;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-weight: bold;
+    color: black;
+    transition: transform 0.3s;
+  }
+  
+  .serv:hover {
+    transform: scale(1.2);
+    box-shadow: 0px 0px 12px rgba(241, 137, 7, 0.8);
+  }
+  
+  .serv-icon {
+    width: 100px;
+    height: 100px;
+    margin-right: 15px;
+  }
+  
+  .serv-text {
+    font-size: 25px;
+    display: flex;
+    align-items: center;
+  }
+  
